# vgt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  environment.yml
include/: argparse.hpp
libs/: CMakeLists.txt
libs/gpu/: CMakeLists.txt
libs/gpu/libgpu/: misc.h  thread_mutex.cpp  thread_mutex.h
libs/gpu/libgpu/opencl/: engine.cpp  engine.h  enum.cpp  utils.h
vgt/: CMakeLists.txt  IndexSet.cpp  IndexSet.h  KDTree.cpp  KDTree.h  RandomEngine.cpp  RandomEngine.h  utils.cpp  utils.h
vgt/algo/: DelaunayApproximator.cpp  DelaunayApproximator.h  VoronoiGraph.cpp  VoronoiGraph.h  interpolate.cpp  kernels.cpp  kernels.h  kernels_gpu.cpp  kernels_gpu.h
vgt/cl/: voronoi.cl
vgt/extra/: README.md  compute_persistence.py  generate_patches.py  imc2npy.py  prepare_patches.cpp
vgt/main/: significant_delaunay.cpp
